--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -2,3 +2,8 @@
     background-color: rgb(255, 166, 167);
     font-family: Verdana, 'DejaVu Sans', 'sans-serif';
 }
+
+#two {
+    color: blue;
+    font-size: 36px;
+}
