Style element with ID 'four'

--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -11,3 +11,9 @@
 .odd-elem.cool {
     font-size: 24px;
 }
+
+#four {
+    background-color: rgb(128, 255, 129);
+    font-size: 24px;
+    font-weight: bold;
+}
